# rocketSpaceship

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  structure.md  tok.txt
.cache/clangd/index/: main.cpp.8EC45199FD583E0B.idx  main.cpp.AE925CADA706C3F7.idx  spaceship.hpp.405997419A452D75.idx  spaceship.hpp.5990E232074AF65C.idx
include/: Object.hpp  Space.hpp  spaceship.hpp  window.hpp
src/: CMakeLists.txt  main.cpp  spaceship.hpp  window.cpp
